apps/media-centre/deployment-default-plex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: media-centre
    component: plex
  name: plex
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: media-centre
      component: plex
      managed-by: terraform
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.media
      labels:
        app: media-centre
        component: plex
        managed-by: terraform
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/London
            - name: PLEX_UID
              value: '990'
            - name: PLEX_GID
              value: '997'
            - name: CHANGE_CONFIG_DIR_OWNERSHIP
              value: 'false'
          image: plexinc/pms-docker
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /identity
              port: 32400
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 1
          name: plex
          ports:
            - containerPort: 32400
              name: plex
              protocol: TCP
          resources:
            claims:
              - name: gpu
            limits:
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 768Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              # Host FUSE remounts must not hide the nested local database mount.
              mountPropagation: None
              name: plex-config
            - mountPath: /config/Library/Application Support/Plex Media Server/Plug-in Support/Databases
              name: plex-data
              subPath: Databases
            - mountPath: /transcode
              name: transcode
            - mountPath: /tmp
              name: tmp
            - mountPath: /data
              name: media-docker
            - mountPath: /data/downloads/media/TV
              name: media-tv
              readOnly: true
            - mountPath: /share
              name: media-share
      dnsPolicy: ClusterFirst
      resourceClaims:
        - name: gpu
          resourceClaimName: hestia-gpu
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 997
        fsGroupChangePolicy: OnRootMismatch
      terminationGracePeriodSeconds: 30
      volumes:
        - name: plex-config
          persistentVolumeClaim:
            claimName: plex-config
        - emptyDir: {}
          name: transcode
        - emptyDir: {}
          name: tmp
        - name: media-docker
          persistentVolumeClaim:
            claimName: media-synology-docker
        - name: media-tv
          persistentVolumeClaim:
            claimName: media-windsor-tv
            readOnly: true
        - name: media-share
          persistentVolumeClaim:
            claimName: media-synology-share
        - name: plex-data
          persistentVolumeClaim:
            claimName: plex-data
        - name: plex-backup-cosi
          secret:
            secretName: plex-backup-s3
