apps/media-centre/deployment-default-tautulli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: media-centre
    component: tautulli
  name: tautulli
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: media-centre
      component: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        elastic.co/dataset: kubernetes.container_logs.media
      labels:
        app: media-centre
        component: tautulli
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: PUID
          value: '994'
        - name: PGID
          value: '997'
        - name: TZ
          value: Europe/London
        image: ghcr.io/tautulli/tautulli:v2.17.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8181
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: tautulli
        ports:
        - containerPort: 8181
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 8181
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          mountPropagation: None
          name: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /mnt/docker/downloads/config/tautulli
          type: Directory
        name: config
