apps/media-centre/service-default-plex.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: media-centre
    component: plex
  name: plex
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: plex
    port: 32400
    protocol: TCP
    targetPort: 32400
  selector:
    app: media-centre
    component: plex
  sessionAffinity: None
  type: ClusterIP
