apps/media-centre/service-default-tautulli.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: media-centre
    component: tautulli
  name: tautulli
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    app: media-centre
    component: tautulli
    managed-by: terraform
  sessionAffinity: None
  type: ClusterIP
